verticalizei os campos do formulário e coloquei um espaço no header para a logo e o botão de logar como administrador.

--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <img src="" alt="">
+        <button id="login">Logar como administrador</button>
     </header>
     <main>
-        <form action="" method="get">
-            <label for="nome">Digite o nome:</label>
-            <input type="text" name="name" id="nome">
-
-            <label for="sobrenome">Digite o sobrenome:</label>
-            <input type="text" name="sobrenome" id="sobrenome">
-
-            <label for="cargo">Digite o cargo:</label>
-            <input type="text" name="cargo" id="cargo">
-
-            <label for="departamento">Digite o departamento:</label>
-            <input type="text" name="departamento" id="departamento">
-
-            <label for="email">Digite o email:</label>
-            <input type="email" name="email" id="email">
-
-            <label for="tel">Digite o telefone:</label>
-            <input type="tel" name="tel" id="tel">
-        </form>
+        <div>
+            <form action="" method="get">
+                <label for="nome">Digite o nome:</label>
+                <input type="text" name="name" id="nome">
+                <label for="sobrenome">Digite o sobrenome:</label>
+                <input type="text" name="sobrenome" id="sobrenome">
+                <label for="cargo">Digite o cargo:</label>
+                <input type="text" name="cargo" id="cargo">
+                <label for="departamento">Digite o departamento:</label>
+                <input type="text" name="departamento" id="departamento">
+                <label for="email">Digite o email:</label>
+                <input type="email" name="email" id="email">
+                <label for="tel">Digite o telefone:</label>
+                <input type="tel" name="tel" id="tel">
+                <button id="cadastrar">Cadastrar</button>
+            </form>
+        </div>
     </main>
     <footer>
         <img src="" alt="">
