--- a/index.html
+++ b/index.html
@@ -12,23 +12,21 @@
         <button id="login">Logar como administrador</button>
     </header>
     <main>
-        <div>
-            <form action="" method="get">
-                <label for="nome">Digite o nome:</label>
-                <input type="text" name="name" id="nome">
-                <label for="sobrenome">Digite o sobrenome:</label>
-                <input type="text" name="sobrenome" id="sobrenome">
-                <label for="cargo">Digite o cargo:</label>
-                <input type="text" name="cargo" id="cargo">
-                <label for="departamento">Digite o departamento:</label>
-                <input type="text" name="departamento" id="departamento">
-                <label for="email">Digite o email:</label>
-                <input type="email" name="email" id="email">
-                <label for="tel">Digite o telefone:</label>
-                <input type="tel" name="tel" id="tel">
-                <button id="cadastrar">Cadastrar</button>
-            </form>
-        </div>
+        <form action="" method="get">
+            <label for="nome">Digite o nome:</label>
+            <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
+            <label for="sobrenome">Digite o sobrenome:</label>
+            <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva">
+            <label for="cargo">Digite o cargo:</label>
+            <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema">
+            <label for="departamento">Digite o departamento:</label>
+            <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia">
+            <label for="email">Digite o email:</label>
+            <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com">
+            <label for="tel">Digite o telefone:</label>
+            <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345">
+            <button id="cadastrar">Cadastrar</button>
+        </form>
     </main>
     <footer>
         <img src="" alt="">
