Centralização do formulário.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <div>Nat Business</div>
         <button id="login">Logar como administrador</button>
     </header>
     <main>
