Coloquei a cor de fundo como gradiente e a cor do botão também.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <form action="" method="get">
+            <h1>Cadastrar funcionário</h1>
             <label for="nome">Digite o nome:</label>
             <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
             <label for="sobrenome">Digite o sobrenome:</label>
