--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
     <main>
         <form action="" method="get">
             <h1>Cadastrar funcionário</h1>
-            <label for="nome">Digite o nome:</label>
-            <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
-            <label for="sobrenome">Digite o sobrenome:</label>
-            <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva">
-            <label for="cargo">Digite o cargo:</label>
-            <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema">
-            <label for="departamento">Digite o departamento:</label>
-            <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia">
-            <label for="email">Digite o email:</label>
-            <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com">
-            <label for="tel">Digite o telefone:</label>
-            <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345">
+            <div>
+                <label for="nome">Digite o nome:</label>
+                <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
+            </div>
+            <div>
+                <label for="sobrenome">Digite o sobrenome:</label>
+                <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva">
+            </div>
+            <div>
+                <label for="cargo">Digite o cargo:</label>
+                <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema">
+            </div>
+            <div>
+                <label for="departamento">Digite o departamento:</label>
+                <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia">
+            </div>
+            <div>
+                <label for="email">Digite o email:</label>
+                <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com">
+            </div>
+            <div>
+                <label for="tel">Digite o telefone:</label>
+                <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345">
+            </div>
             <button id="cadastrar">Cadastrar</button>
         </form>
     </main>
