--- a/loginAdm.html
+++ b/loginAdm.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div>Nat Business</div>
-        <a href="loginAdm.html"><button id="login">Logar como administrador</button></a>
+        <a href="index.html"><button id="login">Cadastrar funcionário</button></a>
     </header>
     <main>
         <form action="" method="get">
@@ -17,27 +17,27 @@
             <section>
                 <div>
                     <label for="nome">Digite o nome:</label>
-                    <input type="text" name="name" id="nome" placeholder="Ex: Nathan" required>
+                    <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
                 </div>
                 <div>
                     <label for="sobrenome">Digite o sobrenome:</label>
-                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva" required>
+                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva">
                 </div>
                 <div>
                     <label for="cargo">Digite o cargo:</label>
-                    <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema" required>
+                    <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema">
                 </div>
                 <div>
                     <label for="departamento">Digite o departamento:</label>
-                    <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia" required>
+                    <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia">
                 </div>
                 <div>
                     <label for="email">Digite o email:</label>
-                    <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com" required>
+                    <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com">
                 </div>
                 <div>
                     <label for="tel">Digite o telefone:</label>
-                    <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345" required>
+                    <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345">
                 </div>
             </section>
             <button id="cadastrar">Cadastrar</button>
