Finalizei (teoricamente) as páginas do cadastro de funcionários e do login como adm.

--- a/loginAdm.html
+++ b/loginAdm.html
@@ -13,38 +13,22 @@
     </header>
     <main>
         <form action="" method="get">
-            <h1>Cadastrar funcionário</h1>
+            <h1>Logar como administrador</h1>
             <section>
                 <div>
-                    <label for="nome">Digite o nome:</label>
-                    <input type="text" name="name" id="nome" placeholder="Ex: Nathan">
+                    <label for="user">Digite o usuário:</label>
+                    <input type="text" name="name" id="user"  required>
                 </div>
                 <div>
-                    <label for="sobrenome">Digite o sobrenome:</label>
-                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva">
-                </div>
-                <div>
-                    <label for="cargo">Digite o cargo:</label>
-                    <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema">
-                </div>
-                <div>
-                    <label for="departamento">Digite o departamento:</label>
-                    <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia">
-                </div>
-                <div>
-                    <label for="email">Digite o email:</label>
-                    <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com">
-                </div>
-                <div>
-                    <label for="tel">Digite o telefone:</label>
-                    <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345">
+                    <label for="senha">Digite a senha:</label>
+                    <input type="text" name="senha" id="sobrenome"  required>
                 </div>
             </section>
-            <button id="cadastrar">Cadastrar</button>
+            <button id="cadastrar">Login</button>
         </form>
     </main>
     <footer>
-        <img src="" alt="">
+        <div>Nat Business</div>
     </footer>
 </body>
 </html>
