mudei somente os os ids dos inputs.

--- a/index.html
+++ b/index.html
@@ -17,34 +17,32 @@
             <section>
                 <div>
                     <label for="nome">Digite o nome:</label>
-                    <input type="text" name="name" id="nome" placeholder="Ex: Nathan" required>
+                    <input type="text" name="name" id="name" placeholder="Ex: Nathan" required>
                 </div>
                 <div>
-                    <label for="sobrenome">Digite o sobrenome:</label>
-                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Ex: da Silva" required>
+                    <label for="lastName">Digite o sobrenome:</label>
+                    <input type="text" name="lastName" id="lastName" placeholder="Ex: da Silva" required>
                 </div>
                 <div>
-                    <label for="cargo">Digite o cargo:</label>
-                    <input type="text" name="cargo" id="cargo" placeholder="Ex: Analista de Sistema" required>
+                    <label for="position">Digite o cargo:</label>
+                    <input type="text" name="position" id="position" placeholder="Ex: Analista de Sistema" required>
                 </div>
                 <div>
-                    <label for="departamento">Digite o departamento:</label>
-                    <input type="text" name="departamento" id="departamento" placeholder="Ex: Tecnologia" required>
+                    <label for="department">Digite o departamento:</label>
+                    <input type="text" name="department" id="department" placeholder="Ex: Tecnologia" required>
                 </div>
                 <div>
                     <label for="email">Digite o email:</label>
                     <input type="email" name="email" id="email" placeholder="Ex: blablabla@gmail.com" required>
                 </div>
                 <div>
-                    <label for="tel">Digite o telefone:</label>
-                    <input type="tel" name="tel" id="tel" placeholder="Ex: +55(011)345345345" required>
+                    <label for="phoneNumber">Digite o telefone:</label>
+                    <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Ex: +55(011)345345345" required>
                 </div>
             </section>
             <button id="cadastrar">Cadastrar</button>
         </form>
     </main>
-    <footer>
-        <img src="" alt="">
-    </footer>
+    <footer></footer>
 </body>
 </html>
