--- a/loginAdm.html
+++ b/loginAdm.html
@@ -17,18 +17,16 @@
             <section>
                 <div>
                     <label for="user">Digite o usuário:</label>
-                    <input type="text" name="name" id="user"  required>
+                    <input type="text" name="name" id="user" required>
                 </div>
                 <div>
-                    <label for="senha">Digite a senha:</label>
-                    <input type="text" name="senha" id="sobrenome"  required>
+                    <label for="password">Digite a senha:</label>
+                    <input type="text" name="password" id="password" required>
                 </div>
             </section>
             <button id="cadastrar">Login</button>
         </form>
     </main>
-    <footer>
-        <div>Nat Business</div>
-    </footer>
+    <footer></footer>
 </body>
 </html>
